# DuckRun

./: .dockerignore  .gitignore  Dockerfile  Makefile  app.py  config.py  docker-compose.yml  pyproject.toml
pages/: home.py
