[project]
name = "park-run-app"
version = "2.1.0"
description = "Duck Run App"
authors = [{ name = "artyom_ev" }]
requires-python = ">3.9"
readme = "README.md"
dependencies = [
    "streamlit==1.32.0",
    "pandas>=2.2.3,<3",
    "bs4>=0.0.2,<0.0.3",
    "requests>=2.32.3,<3",
    "aiohttp>=3.10.9,<4",
    "tqdm>=4.67.1,<5",
    "pydantic-settings>=2.8.1,<3",
    "sqlalchemy>=2.0.38,<3",
    "psycopg2-binary>=2.9.10,<3",
    "psycopg-binary>=3.2.5,<4",
    "psycopg>=3.2.5,<4",
    "asyncpg>=0.30.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
